cmake_minimum_required(VERSION 3.25)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp main.cpp)

add_executable(1.13_Namespace 1.13_Namespace.cpp)
add_executable(4.5_TypeConversion 4.5_TypeConversion.cpp)
add_executable(4.6String 4.6String.cpp)
add_executable(7.3CallByReference 7.3CallByReference.cpp)
add_executable(7.4CallByAddress 7.4CallByAddress.cpp)
add_executable(7.5 7.5.cpp)
add_executable(8.1ObjectOrientedProgramming 8.1ObjectOrientedProgramming.cpp)
add_executable(8.2 8.2.cpp)
add_executable(8.4ConstructorInitializerList 8.4ConstructorInitializerList.cpp)
add_executable(8.5 8.5.cpp)